Fix Edit button alignment

--- a/css/_banner.scss
+++ b/css/_banner.scss
@@ -7,5 +7,5 @@
 }
 
 #editLink {
-  margin-top: -6px;
+  margin-top: -2px;
 }
